--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@ $transition-speed: 200ms;
 
 button, input, textarea {
   font-family: inherit;
+  letter-spacing: .03rem;
 }
 
 body, html {
@@ -31,6 +32,7 @@ body {
   align-items: center;
   font-size: 1rem;
   margin: 0;
+  letter-spacing: .03rem;
 }
 
 h1 {
@@ -46,7 +48,7 @@ form.container {
 
   input[type=text] {
     border: none;
-    width: 40rem;
+    width: 38rem;
     font-size: 1.2rem;
     padding: .5rem;
     margin: .5rem;
@@ -54,7 +56,7 @@ form.container {
   }
 
   button {
-    margin: .4rem;
+    margin: .7rem;
   }
 }
 
@@ -64,7 +66,7 @@ button {
 
 .primary-button, .cancel-button {
   border-radius: 1.5rem;
-  padding: .5rem 1.2rem;
+  padding: 0 1rem;
   color: white;
   font-size: 1.5rem;
   border: none;
@@ -72,8 +74,9 @@ button {
   outline: none;
 
   &.large {
-    font-size: 2.5rem;
-    padding: 20px 90px;
+    font-size: 1.5 rem;
+    padding: .8rem 3.5rem;
+    border-radius: 5rem;
   }
 
   &:disabled {
@@ -82,6 +85,10 @@ button {
     color: $medium-gray;
     cursor: auto;
   }
+}
+
+i.fa {
+  font-size: 1.4rem;
 }
 
 .primary-button {
@@ -108,9 +115,9 @@ button {
 
   &.large {
     background-position: top;
-    background-size: 150px;
-    font-size: 4rem;
-    padding: 11rem 0;
+    background-size: 7rem;
+    font-size: 2.5rem;
+    padding: 8rem 0 4rem;
   }
 }
 
@@ -128,7 +135,6 @@ main {
 
   &.login-page {
     justify-content: center;
-    padding: 100px;
   }
 
   header, footer {
