468 Call button no longer has a blue background on hover when it's disabled

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -100,7 +100,7 @@ i.fa {
   background: $blue;
   border: 2px solid $dark-blue;
 
-  &:hover {
+  &:hover:enabled {
     background: $light-blue;
   }
 }
