--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,8 +60,9 @@ form.container {
   }
 }
 
-button {
+button:enabled {
   transition: background $transition-speed ease-in;
+  cursor: pointer;
 }
 
 .primary-button, .cancel-button {
@@ -70,7 +71,6 @@ button {
   color: white;
   font-size: 1.5rem;
   border: none;
-  cursor: pointer;
   outline: none;
 
   &.large {
@@ -90,7 +90,7 @@ button {
 i.fa {
   font-size: 1.4rem;
 
-  &.fa-large {
+  &.large {
     font-size: 2rem;
     margin-right: 7px;
   }
