--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@ $dark-blue: #0C83B5;
 $light-blue: #64b8d8;
 $red: #DF3C3C;
 $dark-red: #A40B0B;
+$light-red: #FF7676;
 
 $transition-speed: 200ms;
 
@@ -74,7 +75,7 @@ button:enabled {
   outline: none;
 
   &.large {
-    font-size: 1.5 rem;
+    font-size: 1.5rem;
     padding: .8rem 3.5rem;
     border-radius: 5rem;
   }
@@ -91,8 +92,8 @@ i.fa {
   font-size: 1.4rem;
 
   &.large {
-    font-size: 2rem;
-    margin-right: 7px;
+    font-size: 1.2rem;
+    margin-right: .2rem;
   }
 }
 
@@ -103,10 +104,21 @@ i.fa {
   &:hover:enabled {
     background: $light-blue;
   }
-}
 
-.cancel-button {
-  background: $red;
+  &.red {
+    background: $red;
+    border: 1px solid $dark-red;
+    font-size: 1rem;
+    padding: .2rem 1rem;
+
+    i.fa {
+      font-size: 1rem;
+    }
+
+    &:hover {
+      background: $light-red;
+    }
+  }
 }
 
 .branding {
@@ -195,7 +207,7 @@ main {
   flex-direction: row;
   align-items: baseline;
   justify-content: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .video-container {
