486 Found a common abstraction for the other person's email when waiting for a call to start

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -209,7 +209,7 @@ main {
   width: 10rem;
 }
 
-.callee-name, .caller-name {
+.call-email {
   font-size: 1.2rem;
   margin: 1.5rem 0;
   color: $dark-gray;
