--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,7 +117,7 @@ button:enabled {
 i.fa {
   font-size: 1.4rem;
 
-  &.large {
+  &.action {
     font-size: 1.2rem;
     margin-right: .2rem;
   }
