--- a/scss/main.scss
+++ b/scss/main.scss
@@ -101,9 +101,12 @@ button:enabled {
   }
 
   &.large {
-    font-size: 1.5rem;
     padding: .8rem 3.5rem;
     border-radius: 5rem;
+  }
+
+  &.wide {
+    padding: 0 3rem;
   }
 
   &:disabled {
@@ -213,6 +216,12 @@ main {
   font-size: 1.2rem;
   margin: 1.5rem 0;
   color: $dark-gray;
+}
+
+.call-status {
+  display: none;
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
 }
 
 .video-container, .controls-container {
