469 518 Adding failure icon to avatar image when calls fail or are rejected

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -206,10 +206,27 @@ main {
 }
 
 .avatar-image {
-  border-radius: 50%;
-  border: 2px solid $light-gray;
-  height: 10rem;
-  width: 10rem;
+  position: relative;
+
+  img {
+    border-radius: 50%;
+    border: 2px solid $light-gray;
+    height: 10rem;
+    width: 10rem;
+  }
+
+  &.failed:after {
+    content: '\f00d';
+    font-family: FontAwesome;
+    position: absolute;
+    bottom: 1rem;
+    right: 0;
+    color: white;
+    background: #DF3C3C;
+    border-radius: 50%;
+    font-size: 2rem;
+    padding: .3rem .5rem;
+  }
 }
 
 .call-email {
@@ -270,7 +287,7 @@ main {
     margin-top: 2rem;
   }
 
-  .avatar-image {
+  .avatar-image img {
     background: white;
   }
 
