--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,82 +133,102 @@ button:enabled {
   &.wide {
     padding: .4rem 3rem;
   }
+}
+
+.call-button {
+  width: 4rem;
 
   &:disabled {
     background: none;
     border: 2px solid transparent;
     color: $light-gray;
-    cursor: auto;
-    position: relative;
+  }
+}
 
-    span {
-      display: none;
+.answer-button {
+  height: 2.5rem;
+
+  &:before {
+    margin-right: .5rem;
+  }
+
+  &:disabled {
+    background: $light-gray;
+    color: $dark-gray;
+    border: 2px solid $medium-gray;
+  }
+}
+
+.call-button:disabled, .primary-button:disabled {
+  position: relative;
+  cursor: auto;
+
+  span {
+    display: none;
+  }
+
+  &:hover .invalid-call-message {
+    display: inline;
+  }
+
+  .invalid-call-message {
+    font-family: 'Cisco Sans Extra Light';
+    position: absolute;
+    color: $dark-gray;
+    top: -2.15rem;
+    font-size: 0.75rem;
+    right: -0.75rem;
+    border: 1px #bcbcbc solid;
+    border-radius: 1rem;
+    padding: 0.4rem 1rem;
+    background: #ebebeb;
+    white-space: nowrap;
+
+    &:after, &:before {
+      top: 100%;
+      border: solid transparent;
+      content: " ";
+      height: 0;
+      width: 0;
+      position: absolute;
+      pointer-events: none;
+      right: 0.1rem;
     }
 
-    &:hover span {
-      font-family: 'Cisco Sans Extra Light';
-      position: absolute;
-      color: #919191;
-      top: -2.5rem;
-      font-size: 0.75rem;
-      right: -0.75rem;
-      border: 1px #bcbcbc solid;
-      border-radius: 1rem;
-      padding: 0.4rem 1rem;
-      background: #ebebeb;
-      display: inline;
-      white-space: nowrap;
+    &:after {
+      border-color: rgba(235, 235, 235, 0);
+      border-top-color: #ebebeb;
+      border-width: 6px;
+      margin-right: 36px;
+    }
 
-      &:after, &:before {
-        top: 100%;
-        border: solid transparent;
-        content: " ";
-        height: 0;
-        width: 0;
-        position: absolute;
-        pointer-events: none;
-        right: 0.1rem;
-      }
-
-      &:after {
-        border-color: rgba(235, 235, 235, 0);
-        border-top-color: #ebebeb;
-        border-width: 6px;
-        margin-right: 36px;
-      }
-
-      &:before {
-        border-color: rgba(188, 188, 188, 0);
-        border-top-color: #bcbcbc;
-        border-width: 7px;
-        margin-right: 35px;
-      }
+    &:before {
+      border-color: rgba(188, 188, 188, 0);
+      border-top-color: #bcbcbc;
+      border-width: 7px;
+      margin-right: 35px;
     }
   }
 }
 
-.audio-button, .audio-button:disabled {
-  font-family: 'Kitchen Sink';
-  width: 4rem;
-
-  &:after {
+.audio-button, .audio-button:disabled, .answer-audio-only, .answer-audio-only:disabled {
+  &:before {
     content: '\e905';
+    font-family: 'Kitchen Sink';
   }
 
-  &.disabled:after {
+  &.disabled:before {
     content: '\e904';
   }
 }
 
-.video-button, .video-button:disabled {
-  font-family: 'Kitchen Sink';
-  width: 4rem;
-
-  &:after {
+.video-button, .video-button:disabled, .answer-video-audio, .answer-video-audio:disabled {
+  &:before {
     content: '\e900';
+    font-family: 'Kitchen Sink';
   }
 
-  &.disabled:after {
+  &.disabled:before {
     content: '\e901';
   }
 }
