fixed feedback icon position

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -422,7 +422,7 @@ main {
     .feedback-button {
       background: none;
       border: none;
-      margin: 1.5rem 1rem;
+      margin: 1.5rem 2rem 2.5rem;
       font-size: 1rem;
       color: $dark-gray;
       align-self: flex-end;
