--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,11 +22,11 @@
 }
 
 $light-gray: #aaaaaa;
-$sky-blue: #e1f1f7;
-$dark-white: #e0e0e0;
-$gun-metal-black: #2d2d2d;
 $medium-gray: #666666;
 $dark-gray: #555555;
+$dark-white: #e0e0e0;
+$sky-blue: #e1f1f7;
+$gun-metal-black: #2d2d2d;
 $blue: #009EDB;
 $dark-blue: #0C83B5;
 $navy-blue: #46639a;
@@ -36,7 +36,6 @@ $dark-red: #A40B0B;
 $light-red: #FF7676;
 $yellow: #EEEE44;
 $dark-yellow: darken($yellow, 20%);
-$light-border: #e0e0e0;
 $white: #ffffff;
 $black: #000000;
 
@@ -47,10 +46,6 @@ button, input, textarea {
   font-family: inherit;
   letter-spacing: .03rem;
   outline: none;
-}
-
-textarea {
-  border: 1px solid $black;
 }
 
 body, html {
@@ -163,7 +158,7 @@ button:enabled {
   }
 
   &:disabled {
-    background: $light-border;
+    background: $dark-white;
     color: $light-gray;
     border: 1px solid $light-gray;
   }
@@ -222,7 +217,7 @@ button:enabled {
 }
 
 .button-divider {
-    border-left: 1px solid $light-border;
+    border-left: 1px solid $dark-white;
     height: 2.5rem;
     align-self: center;
 }
@@ -270,10 +265,8 @@ button:enabled {
     color: $blue;
     border: 1px solid $blue;
 
-
-
     &:hover:enabled {
-      background: lighten($light-border, 10%);
+      background: lighten($dark-white, 10%);
     }
   }
 }
@@ -512,6 +505,7 @@ main {
       border-radius: 0.25rem;
       height: 7rem;
       font-size: 1rem;
+      border: 2px solid $light-gray;
     }
   }
 
@@ -520,9 +514,11 @@ main {
     align-self: center;
     width: 70%;
     margin-top: 0.75rem;
+    color: $medium-gray;
 
     input {
       margin-left: 0.75rem;
+      margin-right: 0.75rem;
     }
 
     div {
