477 Improved mouse reactivity by adjusting margins & padding
the send feedback buttons couldn't be clicked on their bottom halves
due to the footer overlapping them. Now they can.

Also, if you waved your mouse over the feedback buttons, they would all
blink off when your cursor was between them. Now they don't.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -302,7 +302,7 @@ button:enabled {
   float: right;
   cursor: pointer;
   font-size: 2.25rem;
-  margin: 0 0.25rem;
+  padding: 0 0.25rem;
 
   &:before {
     content: '\e909';
@@ -556,12 +556,17 @@ main {
 #user-feedback-overlay {
   h1 {
     align-self: center;
+    margin: 0;
   }
 
   .comments {
     display: flex;
     width: 70%;
     flex-direction: column;
+
+    h1 {
+      margin: 0.5rem 1rem 1rem 1rem;
+    }
 
     textarea {
       text-align: justify;
@@ -593,7 +598,7 @@ main {
   }
 
   .buttons {
-    margin-top: 4rem;
+    margin-top: 2rem;
 
     button {
       font-size: 1rem;
