--- a/scss/main.scss
+++ b/scss/main.scss
@@ -105,10 +105,66 @@ h1 {
   margin: 1rem;
 }
 
+h2 {
+  font-size: 1.2rem;
+  align-self: center;
+}
+
+.loader {
+  width: 6rem;
+  height: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+
+  &.inactive {
+    display: none;
+  }
+}
+
+.circle {
+  width: 1rem;
+  height: 1rem;
+  background-color: $blue;
+  transform: scale(0.5);
+  opacity: 0.5;
+  display: inline-block;
+  border-radius: 100%;
+}
+
+@mixin keyframes($animation-type){
+  @-webkit-keyframes #{$animation-type} { @content; }
+  @-moz-keyframes #{$animation-type} { @content; }
+  @-o-keyframes #{$animation-type} { @content; }
+  @keyframes #{$animation-type} { @content; }
+}
+
+@include keyframes(loading) {
+  0%, 100% {
+    transform: scale(0.5);
+    opacity: 0.5;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 1;
+  }
+}
+
+@for $i from 1 through 5 {
+  .circle:nth-child(#{$i}) {
+    animation: loading 900ms ease-in-out infinite #{$i * 150ms};
+  }
+}
+
 form.container {
-  border: 2px solid $light-gray;
+  border: 2px solid $dark-white;
   border-radius: 5px;
   display: flex;
+  transition: border-color $transition-speed ease-in;
+
+  &.active {
+    border-color: $light-blue;
+  }
 
   input[type=text] {
     border: none;
@@ -357,6 +413,15 @@ i.fa {
   }
 }
 
+.sign-out {
+  &:before {
+    content: "\e908";
+    font-family: 'Kitchen Sink';
+    font-style: normal;
+    margin-right: .25rem;
+  }
+}
+
 .branding {
   background-image: url(../images/spark-logo.png);
   background-repeat: no-repeat;
@@ -499,7 +564,7 @@ main {
 .call-status {
   display: none;
   font-size: 2.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .video-container, .controls-container {
